# goit-pycore-hw-03

./: README.md  pyproject.toml  users.json
hw/: get_days_from_today.py  get_numbers_ticket.py  get_upcoming_birthdays.py  normalize_phone.py
