[tool.poetry]
name = "goit-pycore-hw-03"
version = "0.1.0"
description = ""
authors = ["g.shevchenko <gvsheva@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"


[tool.poetry.group.dev.dependencies]
pdbpp = "^0.10.3"
pytest = "^8.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
